--- a/.classpath
+++ b/.classpath
@@ -21,5 +21,6 @@
 	<classpathentry kind="lib" path="lib/jaxb-core-2.3.0-b170127.1453.jar"/>
 	<classpathentry kind="lib" path="lib/jaxb-impl-2.3.0-b170127.1453.jar"/>
 	<classpathentry kind="lib" path="lib/activation-1.0.2.jar"/>
+	<classpathentry kind="lib" path="lib/nitrite-3.1.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
